# StellarTrust

./: .gitignore  ARCHITECTURE.md  BUILD_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK_RESPONSE_SHEET.md  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci-cd.yml
app/: Dashboard.module.css  globals.css  layout.tsx  page.tsx
app/bounties/: page.tsx
app/community/: page.tsx
app/disputes/: page.tsx
app/disputes/[id]/: DisputeDetails.module.css  page.tsx
app/monitoring/: page.tsx
app/projects/: page.tsx
app/projects/[id]/: ProjectDetails.module.css  page.tsx
app/projects/create/: page.tsx
app/projects/id/: page.tsx
app/wallet/: page.tsx
components/: ConnectWallet.module.css  ConnectWalletScreen.tsx  DashboardLayout.tsx  TrustBadge.tsx
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
lib/: constants.ts  indexer.ts  soroban.ts
stellartrusts/: README.md  next.config.ts  package-lock.json  package.json
stellartrusts/app/: globals.css  layout.tsx  page.tsx
stellartrusts/app/create-project/: page.tsx
stellartrusts/app/dashboard/: page.tsx
stellartrusts/components/: Navbar.tsx  WalletProvider.tsx
stellartrusts/contracts/DisputeResolver/: Cargo.toml
stellartrusts/contracts/EscrowFactory/: Cargo.toml
stellartrusts/contracts/MilestoneEscrow/: Cargo.toml
stellartrusts/lib/: store.ts
trustlance/: ARCHITECTURE.md  package-lock.json  package.json
trustlance/app/: Dashboard.module.css  layout.tsx
trustlance/components/: ConnectWallet.module.css  ConnectWalletScreen.tsx  DashboardLayout.tsx
(+11 files in other folders)
