[package]
name = "trustlance-escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.1.0"

[dev-dependencies]
soroban-sdk = { version = "21.1.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = false
